{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 229,
  "lineage": "ca6183f3-5f46-eb7e-8b5f-1b00ca1d68df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dawgs_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0675ceed0b2c167cf",
            "arn": "arn:aws:ec2:us-east-1:414392949667:elastic-ip/eipalloc-0675ceed0b2c167cf",
            "domain": "vpc",
            "id": "eipalloc-0675ceed0b2c167cf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-51-118-227.compute-1.amazonaws.com",
            "public_ip": "100.51.118.227",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-1c-nat-eip01"
            },
            "tags_all": {
              "Name": "armageddon-1c-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dawgs_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:414392949667:instance/i-0862d705aa3338501",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-1c-instance-profile01",
            "id": "i-0862d705aa3338501",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ca43a60448ec8b52"
              }
            ],
            "primary_network_interface_id": "eni-0ca43a60448ec8b52",
            "private_dns": "ip-10-180-1-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.180.1.70",
            "public_dns": "ec2-3-237-84-189.compute-1.amazonaws.com",
            "public_ip": "3.237.84.189",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b71587fe087a089",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d33025f88fe3f616",
            "tags": {
              "Name": "armageddon-1c-ec201"
            },
            "tags_all": {
              "Name": "armageddon-1c-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03736869c55899be2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "i-0862d705aa3338501",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.dawgs_instance_profile01",
            "aws_iam_role.dawgs_ec2_role01",
            "aws_security_group.dawgs_ec2_sg01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dawgs_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:414392949667:instance/i-02a9af8ff01d03e1c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-1c-instance-profile01",
            "id": "i-02a9af8ff01d03e1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01a0d60834bcdbbd0"
              }
            ],
            "primary_network_interface_id": "eni-01a0d60834bcdbbd0",
            "private_dns": "ip-10-180-11-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.180.11.87",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0458dc2e83371b6bc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0befb67c433db2da0",
            "tags": {
              "Name": "us-east-1-ec201-private"
            },
            "tags_all": {
              "Name": "us-east-1-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03736869c55899be2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "i-02a9af8ff01d03e1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.dawgs_instance_profile01",
            "aws_iam_role.dawgs_ec2_role01",
            "aws_security_group.dawgs_ec2_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dawgs_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:internet-gateway/igw-0e1d1b68f13304ddd",
            "id": "igw-0e1d1b68f13304ddd",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-1c-igw01"
            },
            "tags_all": {
              "Name": "armageddon-1c-igw01"
            },
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dawgs_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0675ceed0b2c167cf",
            "association_id": "eipassoc-015a1619112fea719",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ef45324e0797787d",
            "network_interface_id": "eni-03fdce70cc247c412",
            "private_ip": "10.180.1.230",
            "public_ip": "100.51.118.227",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d33025f88fe3f616",
            "tags": {
              "Name": "armageddon-1c-nat01"
            },
            "tags_all": {
              "Name": "armageddon-1c-nat01"
            },
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.dawgs_nat_eip01",
            "aws_internet_gateway.dawgs_igw01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dawgs_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06c5a398a22f4d1bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ef45324e0797787d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-06c5a398a22f4d1bc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-06c5a398a22f4d1bc"
          },
          "dependencies": [
            "aws_eip.dawgs_nat_eip01",
            "aws_internet_gateway.dawgs_igw01",
            "aws_nat_gateway.dawgs_nat01",
            "aws_route_table.dawgs_private_rt01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dawgs_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e1d1b68f13304ddd",
            "id": "r-rtb-03b06d560dd7f01e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03b06d560dd7f01e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03b06d560dd7f01e3"
          },
          "dependencies": [
            "aws_internet_gateway.dawgs_igw01",
            "aws_route_table.dawgs_public_rt01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dawgs_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:route-table/rtb-06c5a398a22f4d1bc",
            "id": "rtb-06c5a398a22f4d1bc",
            "owner_id": "414392949667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-1c-private-rt01"
            },
            "tags_all": {
              "Name": "armageddon-1c-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "rtb-06c5a398a22f4d1bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dawgs_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:route-table/rtb-03b06d560dd7f01e3",
            "id": "rtb-03b06d560dd7f01e3",
            "owner_id": "414392949667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-1c-public-rt01"
            },
            "tags_all": {
              "Name": "armageddon-1c-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "rtb-03b06d560dd7f01e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dawgs_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0becec96b6f3df447",
            "region": "us-east-1",
            "route_table_id": "rtb-06c5a398a22f4d1bc",
            "subnet_id": "subnet-0befb67c433db2da0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_private_rt01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c1626a698b72dc5",
            "region": "us-east-1",
            "route_table_id": "rtb-06c5a398a22f4d1bc",
            "subnet_id": "subnet-0524fea3ca78737c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_private_rt01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dawgs_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c79fbf6d13ea5e2d",
            "region": "us-east-1",
            "route_table_id": "rtb-03b06d560dd7f01e3",
            "subnet_id": "subnet-0d33025f88fe3f616"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_public_rt01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc696dda51d109e",
            "region": "us-east-1",
            "route_table_id": "rtb-03b06d560dd7f01e3",
            "subnet_id": "subnet-03560028ceb504ab6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_public_rt01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dawgs_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-03736869c55899be2",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03736869c55899be2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "armageddon-1c-ec2-sg01",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-03736869c55899be2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dawgs_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-0b23cf7474fd8aecb",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b23cf7474fd8aecb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03736869c55899be2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "armageddon-1c-rds-sg01",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-1c-rds-sg01"
            },
            "tags_all": {
              "Name": "armageddon-1c-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-0b23cf7474fd8aecb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_ec2_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dawgs_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-0f37029ee590ad24b",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0f37029ee590ad24b",
            "ingress": [],
            "name": "us-east-1-vpce-sg01",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-vpce-sg01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-0f37029ee590ad24b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dawgs_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0befb67c433db2da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.180.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0befb67c433db2da0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-1c-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-1c-private-subnet01"
            },
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0befb67c433db2da0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0524fea3ca78737c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.180.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0524fea3ca78737c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-1c-private-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-1c-private-subnet02"
            },
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0524fea3ca78737c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dawgs_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0d33025f88fe3f616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.180.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d33025f88fe3f616",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-1c-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-1c-public-subnet01"
            },
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0d33025f88fe3f616",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-03560028ceb504ab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.180.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03560028ceb504ab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-1c-public-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-1c-public-subnet02"
            },
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-03560028ceb504ab6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dawgs_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc/vpc-0042232394b63fb91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.180.0.0/16",
            "default_network_acl_id": "acl-09d8fda4fbfc324a9",
            "default_route_table_id": "rtb-0cde6428908d5a642",
            "default_security_group_id": "sg-05a3d811f42112fac",
            "dhcp_options_id": "dopt-00c5775a73b9d13e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0042232394b63fb91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cde6428908d5a642",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-1c-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-1c-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpc-0042232394b63fb91",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-076bf482d04cffcac",
            "dns_entry": [
              {
                "dns_name": "vpce-076bf482d04cffcac-2x6csd5w.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-076bf482d04cffcac-2x6csd5w-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-076bf482d04cffcac-2x6csd5w-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06134212LJ8WRKP4CM21"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-076bf482d04cffcac",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0064513464a8658ad",
              "eni-0cef204b9d665a673"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f37029ee590ad24b"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.37",
                "subnet_id": "subnet-0befb67c433db2da0"
              },
              {
                "ipv4": "10.180.12.48",
                "subnet_id": "subnet-0524fea3ca78737c4"
              }
            ],
            "subnet_ids": [
              "subnet-0524fea3ca78737c4",
              "subnet-0befb67c433db2da0"
            ],
            "tags": {
              "Name": "us-east-1-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-076bf482d04cffcac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-07dc1fcc0846c3714",
            "dns_entry": [
              {
                "dns_name": "vpce-07dc1fcc0846c3714-r91euavn.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07dc1fcc0846c3714-r91euavn-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07dc1fcc0846c3714-r91euavn-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00602052WE1W93EE0P9O"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z07530983DP0SU0VXYAK5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07dc1fcc0846c3714",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03bcd7130f415fa47",
              "eni-0adab761c9a9c75f5"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f37029ee590ad24b"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.63",
                "subnet_id": "subnet-0befb67c433db2da0"
              },
              {
                "ipv4": "10.180.12.57",
                "subnet_id": "subnet-0524fea3ca78737c4"
              }
            ],
            "subnet_ids": [
              "subnet-0524fea3ca78737c4",
              "subnet-0befb67c433db2da0"
            ],
            "tags": {
              "Name": "us-east-1-vpce-kms01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-07dc1fcc0846c3714",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-0acd9a9770c7f9668",
            "dns_entry": [
              {
                "dns_name": "vpce-0acd9a9770c7f9668-ggri155b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0acd9a9770c7f9668-ggri155b-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0acd9a9770c7f9668-ggri155b-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07465982BDINDF7Q1G93"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00587401112WD0KDV3O3"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0059550BPM398P194HK"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z074659313ET8YAT4DIR4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0acd9a9770c7f9668",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010a8ccd10168fe0f",
              "eni-0e7d484f7ae97baad"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f37029ee590ad24b"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.58",
                "subnet_id": "subnet-0befb67c433db2da0"
              },
              {
                "ipv4": "10.180.12.43",
                "subnet_id": "subnet-0524fea3ca78737c4"
              }
            ],
            "subnet_ids": [
              "subnet-0524fea3ca78737c4",
              "subnet-0befb67c433db2da0"
            ],
            "tags": {
              "Name": "us-east-1-vpce-logs01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-0acd9a9770c7f9668",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-02259f8a4028cb501",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02259f8a4028cb501",
            "ip_address_type": "ipv4",
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06c5a398a22f4d1bc"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "us-east-1-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-02259f8a4028cb501",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.dawgs_private_rt01",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-01b52430d9fe7cb28",
            "dns_entry": [
              {
                "dns_name": "vpce-01b52430d9fe7cb28-c5uq737q.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01b52430d9fe7cb28-c5uq737q-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01b52430d9fe7cb28-c5uq737q-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07455122JRYVGAHSWSAN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01b52430d9fe7cb28",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-059084f84b394c257",
              "eni-0c3054ac0058aa017"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f37029ee590ad24b"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.191",
                "subnet_id": "subnet-0befb67c433db2da0"
              },
              {
                "ipv4": "10.180.12.214",
                "subnet_id": "subnet-0524fea3ca78737c4"
              }
            ],
            "subnet_ids": [
              "subnet-0524fea3ca78737c4",
              "subnet-0befb67c433db2da0"
            ],
            "tags": {
              "Name": "us-east-1-vpce-secrets01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-01b52430d9fe7cb28",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-004d5691b858c22d0",
            "dns_entry": [
              {
                "dns_name": "vpce-004d5691b858c22d0-nn95a8mf.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-004d5691b858c22d0-nn95a8mf-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-004d5691b858c22d0-nn95a8mf-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z074839618ETYX0SCP3NU"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z00579732OUQW5VOROR3V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-004d5691b858c22d0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-039a450a49c7b4329",
              "eni-09927580827aa8f8a"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f37029ee590ad24b"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.73",
                "subnet_id": "subnet-0befb67c433db2da0"
              },
              {
                "ipv4": "10.180.12.143",
                "subnet_id": "subnet-0524fea3ca78737c4"
              }
            ],
            "subnet_ids": [
              "subnet-0524fea3ca78737c4",
              "subnet-0befb67c433db2da0"
            ],
            "tags": {
              "Name": "us-east-1-vpce-ssm01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-004d5691b858c22d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-00bc9e8a1db56bdc1",
            "dns_entry": [
              {
                "dns_name": "vpce-00bc9e8a1db56bdc1-6c6pylfa.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00bc9e8a1db56bdc1-6c6pylfa-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00bc9e8a1db56bdc1-6c6pylfa-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00602183FUZUHOMHQLYX"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z0060217C55R1V80KLQL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00bc9e8a1db56bdc1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0420977928dbb2ba2",
              "eni-0b5b0b157687863ea"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f37029ee590ad24b"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.81",
                "subnet_id": "subnet-0befb67c433db2da0"
              },
              {
                "ipv4": "10.180.12.188",
                "subnet_id": "subnet-0524fea3ca78737c4"
              }
            ],
            "subnet_ids": [
              "subnet-0524fea3ca78737c4",
              "subnet-0befb67c433db2da0"
            ],
            "tags": {
              "Name": "us-east-1-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "us-east-1-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0042232394b63fb91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-00bc9e8a1db56bdc1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    }
  ]
}